added blur and changed font

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,10 +55,10 @@
           <a href="/internet-corporativo.html" class="btn btn-primary-soft shadow lift me-1 mb-5">
             Internet Corporativo <i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
           </a>
-          <a href="/proyectos-electronicos.html" class="btn btn-primary-soft shadow lift me-1">
+          <a href="/proyectos-electronicos.html" class="btn btn-primary-soft shadow lift me-1 mb-5">
             Proyectos Eléctronicos <i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
           </a>
-          <a href="/proyectos-telecom.html" class="btn btn-primary-soft shadow lift me-1">
+          <a href="/proyectos-telecom.html" class="btn btn-primary-soft shadow lift me-1 mb-5">
             Proyectos Telecomunicaciones <i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
           </a>
   
