added link de interes and contactos

--- a/src/html/proyectos-telecom.html
+++ b/src/html/proyectos-telecom.html
@@ -27,7 +27,7 @@
 
             <!-- Image -->
             <div class="img-skewed img-skewed-start mb-8 mb-md-0">
-              <img src="https://i.ibb.co/sHZtKsz/Screen-Shot-2022-03-17-at-2-31-02-PM.png" alt="..." class=" img-fluid mw-md-110" data-aos="img-skewed-item-start" data-aos-delay="100" style="border-radius:20px;">
+              <img src="https://i.ibb.co/cXpTWkb/Screen-Shot-2022-03-17-at-2-38-53-PM.png" alt="..." class=" img-fluid mw-md-110" data-aos="img-skewed-item-start" data-aos-delay="100" style="border-radius:20px;">
             </div>
 
           </div>
@@ -37,7 +37,7 @@
             <h1 class="display-3">
               Proyectos Industriales<br>
               <span class="text-primary">
-                Eléctricos</span>
+                Telecomunicaciones</span>
             </h1>
 
             <!-- Text -->
@@ -67,7 +67,7 @@
 
             <!-- Image -->
             <div class="img-skewed img-skewed-end mb-10 mb-md-0">
-              <img src="https://i.ibb.co/pLDVNns/Alarmas-de-Seguirdad.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
+              <img src="https://i.ibb.co/YRskfrH/Cableado-estucturado.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
             </div>
 
           </div>
@@ -75,8 +75,8 @@
 
             <!-- Heading -->
             <h2>
-              Instalaciones Electrica de<br>
-              <span class="text-primary">Media y Baja Tensión</span>
+              Cableado<br>
+              <span class="text-primary">Estructurado</span>
             </h2>
 
             <!-- Text -->
@@ -95,7 +95,7 @@
 
             <!-- Image -->
             <div class="img-skewed img-skewed-end mb-10 mb-md-0">
-              <img src="https://i.ibb.co/pLDVNns/Alarmas-de-Seguirdad.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
+              <img src="https://i.ibb.co/LhZ23qk/radio-enlances.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
             </div>
 
           </div>
@@ -103,8 +103,8 @@
 
             <!-- Heading -->
             <h2>
-              Alarmas de<br>
-              <span class="text-primary">Seguridad</span>
+              Radio<br>
+              <span class="text-primary">Enlances Corporativos</span>
             </h2>
 
             <!-- Text -->
@@ -123,7 +123,7 @@
 
             <!-- Image -->
             <div class="img-skewed img-skewed-end mb-10 mb-md-0">
-              <img src="https://i.ibb.co/rQnKpZZ/alarmas-contra-incendios.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
+              <img src="https://i.ibb.co/25GjcFN/redes-inala-mbrica.png" alt="redes-inala-mbrica" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
             </div>
 
           </div>
@@ -131,8 +131,8 @@
 
             <!-- Heading -->
             <h2>
-              Alarmas Contra<br>
-              <span class="text-primary">Incendios</span>
+              Redes<br>
+              <span class="text-primary">Inalámbrica</span>
             </h2>
 
             <!-- Text -->
@@ -151,7 +151,7 @@
 
             <!-- Image -->
             <div class="img-skewed img-skewed-end mb-10 mb-md-0">
-              <img src="https://i.ibb.co/pLDVNns/Alarmas-de-Seguirdad.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
+              <img src="https://i.ibb.co/HDyX8gp/camara-de-segurida.png" alt="..." class="img-fluid" data-aos="img-skewed-item-end">
             </div>
 
           </div>
@@ -159,9 +159,9 @@
 
             <!-- Heading -->
             <h2>
-              Cercado
+              Cámaras de
               <br>
-              <span class="text-primary">Electrico</span>
+              <span class="text-primary">Seguridad</span>
             </h2>
 
             <!-- Text -->
