--- a/src/html/proyectos-electronicos.html
+++ b/src/html/proyectos-electronicos.html
@@ -36,7 +36,7 @@
             <!-- Heading -->
             <h1 class="display-3">
               Proyectos Industriales<br>
-              <span class="text-primary">
+              <span >
                 Eléctricos</span>
             </h1>
 
@@ -46,12 +46,12 @@
             </p>
 
             <!-- Buttons -->
-            <a href="#!" class="btn btn-primary me-1 lift">
+            <a href="/contactos.html" class="btn btn-primary me-1 lift">
               Contactos <i class="fe fe-arrow-right ms-3"></i>
             </a>
-            <a href="#!" class="btn btn-primary-soft lift">
+            <!-- <a href="#!" class="btn btn-primary-soft lift">
               Aprende más
-            </a>
+            </a> -->
 
           </div>
         </div> <!-- / .row -->
