--- a/src/html/te-ayudamos.html
+++ b/src/html/te-ayudamos.html
@@ -75,7 +75,7 @@
 
                     <!-- Text -->
                     <p class="text-gray-700">
-                      The program cost is $150. However, we ensure cost is never a barrier to enter the program. If this places a financial burden on your family, please see below on how to attain a need-based scholarship.
+                       <a href="https://pdfhost.io/v/VCAZLX584_Info_0">Accede a la guía haciendo clic aquí.</a>
                     </p>
 
 
@@ -115,7 +115,7 @@
 
                     <!-- Text -->
                     <p class="text-gray-700">
-                      The program cost is $150. However, we ensure cost is never a barrier to enter the program. If this places a financial burden on your family, please see below on how to attain a need-based scholarship.
+
                     </p>
 
 
@@ -153,7 +153,6 @@
 
                     <!-- Text -->
                     <p class="text-gray-700">
-                      The program cost is $150. However, we ensure cost is never a barrier to enter the program. If this places a financial burden on your family, please see below on how to attain a need-based scholarship.
                     </p>
 
 
