--- a/src/html/proyectos-telecom.html
+++ b/src/html/proyectos-telecom.html
@@ -36,7 +36,7 @@
             <!-- Heading -->
             <h1 class="display-3">
               Proyectos Industriales<br>
-              <span class="text-primary">
+              <span>
                 Telecomunicaciones</span>
             </h1>
 
@@ -49,9 +49,9 @@
             <a href="#!" class="btn btn-primary me-1 lift">
               Contactos <i class="fe fe-arrow-right ms-3"></i>
             </a>
-            <a href="#!" class="btn btn-primary-soft lift">
+            <!-- <a href="#!" class="btn btn-primary-soft lift">
               Aprende más
-            </a>
+            </a> -->
 
           </div>
         </div> <!-- / .row -->
